<resources>
    <string name="app_name">MOBIOSafe</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_helpline">Helpline</string>
    <string name="menu_feedback">Feedback</string>
    <string name="menu_about">About</string>
    <string name="menu_privacypolicy">Privacy Policy</string>
    <string name="menu_faq">FAQ</string>

    <string name="bottom_menu_dashboard">Dashboard</string>
    <string name="bottom_menu_history">History</string>
    <string name="bottom_menu_health_tips">Health Tips</string>
    <string name="bottom_menu_settings">Settings</string>

    <string name="frag_his">History</string>
    <string name="frag_health_tips">Health Tips</string>
    <string name="frag_settings">Settings</string>

    <string name="todo">TODO</string>
    <string name="taking_assessment">Taking assessment for?</string>
    <string name="login_text">Login to your Account</string>
    <string name="EMPLOYEE">EMPLOYEE</string>
    <string name="third_party">THIRD PARTY</string>
    <string-array name="veg_names">
        <item>Any significant Past Medical history</item>
        <item>Diabetes</item>
        <item>Hypertension</item>
        <item>Any Heart related problem</item>
        <item>brain stroke</item>
        <item>Asthma or other hronic lung disease</item>
        <item>Chronic kidney/liver Disease</item>
        <item>None</item>
    </string-array>

    <string name="user_name">HANUMAN CHANDR...</string>
    <string name="sap_id">51365354</string>
    <string name="assessment_status">Assessment Status</string>
    <string name="assessment_taken">Last Assessment: 2020-09-23 12:11:00 PM</string>
    <string name="nearby_devices">Nearby Devices</string>
    <string name="app_users">MobioSafe Users</string>
    <string name="scan_time_label">Last Scan Time</string>
    <string name="scan_time">2020-09-24 15:40:20</string>
    <string name="device_count">0</string>
    <string name="aarogya_app_text">Aarogya Setu</string>
    <string name="aarogya_app_installed_status">Your device does not have Aarogya Setu app installed. Please install to connect with the essential health care services.</string>
    <string name="install_btn_text">INSTALL</string>
    <string name="gate_entry_btn_text">GATE Entry</string>

    <string name="hcl_text">HCL</string>
    <string name="login_sub_heading_txt">Welcome to HCL MOBIOSafe</string>
    <string name="covid_text">COVID-19: GATE ENTRY QUESTION\n \t\t\t\t\t\t\t\t\t\t\t\t\t\tTOOL</string>
    <string name="submit_button_text">Submit</string>
    <string name="radio_emp_txt">HCL Employee</string>
    <string name="radio_third_part_txt">Third Party</string>
    <string name="qn_take_ass_txt">Taking assessment for?</string>
    <string name="qn_are_you">Are you?</string>
    <string name="ans_self">Self</string>
    <string name="ans_on_behalf">On Behalf</string>
    <string name="qn3_txt">Do you currently reside in a declared COVID-19 Hotspot Area / COVID-19 Containment zone or have gone there during the last 14 days?</string>
    <string name="ans_yes_txt">Yes</string>
    <string name="ans_no_txt">No</string>
    <string name="submit_btn_txt">SUBMIT</string>
    <string name="employee_button_txt">EMPLOYEE</string>
    <string name="third_party_txt">THIRD PARTY</string>
</resources>