<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">


    <View
        android:id="@+id/myRectangleView"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@color/colorAppBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="5" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@id/login_icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAppBackground"
        android:src="@drawable/login_screen_icon"
        app:layout_constraintBottom_toBottomOf="@+id/myRectangleView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myRectangleView"
        app:layout_constraintVertical_weight="5" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        style="@style/sub_heading_text_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_sub_heading_txt"
        app:layout_constraintBottom_toBottomOf="@+id/login_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/myRectangleView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/hcl_text_id"
        style="@style/heading_text_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hcl_text"
        app:layout_constraintBottom_toTopOf="@+id/appCompatTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/myRectangleView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/login_info_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="18dp"
        android:text="@string/login_text"
        android:textSize="@dimen/btn_text_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/employee_login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_icon"
        app:layout_constraintVertical_weight="5" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/employee_login_btn"
        style="@style/button_text_style"
        android:layout_width="378dp"
        android:layout_height="52dp"
        android:text="@string/employee_button_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_icon" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/third_party_login_btn"
        style="@style/button_text_style"
        android:layout_width="378dp"
        android:layout_height="52dp"
        android:text="@string/third_party_txt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/employee_login_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>